// generated by sheeter, DO NOT EDIT.

syntax = "proto3";
package sheeterProto;
option go_package = ".;sheeterProto";
import 'reward.proto';

message Benchmark11Data {
  optional Reward Reward = 1; // 
  optional bool Enable = 2; // 是否啟用
  optional int64 Key = 3; // 索引
  optional string Name = 4; // 名稱
}

message Benchmark11DataStorer {
  map<int64, Benchmark11Data> Datas = 1;
}
